syntax = "proto3";

option go_package  = "shared/proto/deprecatedzconfig";
option java_package = "com.zededa.cloud.uservice.proto";

import "devcommon/devcommon.proto";
import "appconfig.proto";
import "network.proto";

message EdgeDevConfig {
	UUIDandVersion id = 1;
	bytes devConfigSha256 = 2;
	bytes devConfigSignature = 3;
	repeated AppInstanceConfig apps   = 4;
	repeated UnderlayNetwork networks = 5;
}
